# ShapeArray

./: .gitignore  README.md  pyproject.toml
src/shape_array/: __init__.py  __main__.py  array.py  io.py
src/shape_array/shapes/: __init__.py  base.py  circle.py  line.py  point.py
tests/: test_array.py  test_shapes.py
