[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shape-array"
version = "0.0.0"
description = "OOP shape collection utilities (scaffold)."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # Add runtime deps here, e.g. "numpy>=1.26"
]

[tool.setuptools.packages.find]
where = ["src"]
